syntax = "proto3";
package filesystem;

 message MetaData {
	string Name = 1;
	int64 Size  = 2;
	string Sha1 = 3;
	bool BackedUp = 4;
	repeated string Versions = 5;
} 